fix: button width overflow in mobile

--- a/newbie/huddle-landing-page-with-single-introductory-section-master/css/styles.css
+++ b/newbie/huddle-landing-page-with-single-introductory-section-master/css/styles.css
@@ -73,7 +73,9 @@ body {
         font-size: 1.33rem;
         padding: 1.17rem 0;
         border-radius: 2.5rem;
-        width: 22.22rem;
+        width: 100%;
+        max-width: 22.22rem;
+
     }
 
     footer {
